# mini

./: .gitignore  MIGRATE_TO_S3.md  README.md  docker-compose.yml  vercel.json
backend/: README.md  aegis.db  check_users.py  init_db.py  main.py  pyproject.toml  requirements.txt  seed.py  start.sh  test_login_repro.py  test_me.py  test_me_asgi.py  test_uuid.py  users.json
backend/app/api/: auth.py  courses.py  files.py  grievances.py  opportunities.py  users.py
backend/app/core/: config.py  deps.py  security.py  storage.py
backend/app/db/: database.py
backend/app/models/: __init__.py  academic.py  grievance.py  opportunity.py  user.py
backend/app/schemas/: auth.py
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/calendar/: page.tsx
frontend/app/(dashboard)/courses/: page.tsx
frontend/app/(dashboard)/courses/[id]/: page.tsx
frontend/app/(dashboard)/dashboard/: page.tsx
frontend/app/(dashboard)/grievances/: page.tsx
frontend/app/(dashboard)/noticeboard/: page.tsx
frontend/app/(dashboard)/opportunities/: page.tsx
frontend/app/(dashboard)/profile/: page.tsx
frontend/app/(dashboard)/settings/: page.tsx
frontend/components/layout/: dashboard-layout.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  sonner.tsx
frontend/lib/: api.ts
frontend/stores/: auth.ts
prisma/: schema.prisma
(+5 files in other folders)
