[project]
name = "backend"
version = "0.1.0"
description = "AEGIS Platform - IIT Mandi Campus Management System"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.1.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv]
dev-dependencies = []
python-downloads = "automatic"
python-preference = "managed"
